--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-18 10:43:53
+lastsearch = 2024-07-18 13:23:41
 
 [scholar.google.com]
 match = -43.8%%
@@ -117,9 +117,9 @@ title = THUẬN PHÁO MAI HOA TUYỀN PHÁ HOÀNH XE TẬP 18
 url = https://www.youtube.com/watch?v=5tAzMm3oK7w
 
 [books.google.com]
-match = -218.8%%
-title = Chức vụ cung ứng Lời Tập 25 Số 1 Kì 2: Nghiên cứu kết tinh ...
-url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+18&source=bl&ots=aHabAT6hvb&sig=ACfU3U1MLaT8wp-mSEihoZtSC5svoRnQ0w&hl=en&sa=X&ved=2ahUKEwivpZqa1q-HAxXtl4kEHS_3ApwQ6AF6BAghEAM
+match = -250.0%%
+title = Tập Thơ Truyện Hồn Lang Về Cõi Thế - Page 18 - Google Books Result
+url = https://books.google.com/books?id=ePhiEAAAQBAJ&pg=PA18&lpg=PA18&dq=chieu+lac+soc+18&source=bl&ots=lke4w-Kmsm&sig=ACfU3U1VsK5A4DIs5L9qlMj8fOmI1U7pzw&hl=en&sa=X&ved=2ahUKEwiYv-_1-a-HAxU3AHkGHcFWDK0Q6AF6BAgiEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
@@ -397,9 +397,9 @@ title = Đối Chiếu Đơn Vị Hành Chính
 url = https://danhmuchanhchinh.gso.gov.vn/Doi_Chieu_Moi.aspx
 
 [vietstock.vn]
-match = -187.5%%
-title = Tự doanh và khối ngoại giao dịch ngược chiều ở nhiều mã
-url = https://vietstock.vn/2024/07/theo-dau-dong-tien-ca-map-1507-tu-doanh-va-khoi-ngoai-giao-dich-nguoc-chieu-o-nhieu-ma-830-1207689.htm
+match = -225.0%%
+title = Phân tích kỹ thuật phiên chiều 18/07: Tâm lý thận trọng bao ...
+url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-1807-tam-ly-than-trong-bao-trum-thi-truong-585-1208616.htm
 
 [nongnghiep.vn]
 match = -12.5%%
