--- a/images/chieu-truc-den-12/config.ini
+++ b/images/chieu-truc-den-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-12.html
 lastopen = 2024-06-07 00:20:09
 
 [search]
-lastsearch = 2024-07-18 09:51:43
+lastsearch = 2024-07-18 13:19:46
 
 [demxanh.com]
 match = -135.3%%
@@ -12,9 +12,9 @@ title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
 url = https://demxanh.com/chieu-truc.html
 
 [chieutrelanlan.com]
-match = -58.8%%
-title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
-url = https://chieutrelanlan.com/chieu-truc-p17.html
+match = -64.7%%
+title = Chiếu trúc mắt nhỏ có viền màu đen 140x190cm
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-co-vien-mau-den-140x190cm-34.html
 
 [thegioidemtot.vn]
 match = -58.8%%
@@ -47,9 +47,9 @@ title = Chiếu trúc đen 12 - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/chieu-truc-den-12.html
 
 [chieutrucsaigon.com]
-match = -29.4%%
-title = CHIẾU TRÚC SẢN PHẨM ĐỘC ĐÁO ĐA DẠNG
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-san-pham-doc-dao-da-dang-40.html
+match = 11.8%%
+title = BÁN CHIẾU TRÚC VIỆT NAM QUẬN 12
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/ban-chieu-truc-viet-nam-quan-12-104.html
 
 [tiki.vn]
 match = -111.8%%
@@ -70,4 +70,14 @@ url = https://www.youtube.com/watch?v=FFV6Oqxq3Ds
 match = -182.4%%
 title = Chiếu trúc cao cấp Linh Chi, nguyên liệu tre Việt Nam chất ...
 url = https://chieutrelinhchi.com/chieu-truc/38
+
+[demsonghonghanoi.com]
+match = -170.6%%
+title = Loại chiếu trúc nào tốt nhất trên thị trường? - ĐỆM SÔNG HỒNG
+url = https://demsonghonghanoi.com/loai-chieu-truc-nao-tot-nhat-tren-thi-truong/
+
+[nemsaithanh.com]
+match = 30.0%%
+title = Chiếu Trúc
+url = https://nemsaithanh.com/chieu-truc/chieu-truc/
 
