--- a/images/nem-pyeoda-thuong-18/config.ini
+++ b/images/nem-pyeoda-thuong-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-18.html
 lastopen = 2024-06-18 17:45:17
 
 [search]
-lastsearch = 2024-07-18 08:02:18
+lastsearch = 2024-07-18 13:20:06
 
 [www.facebook.com]
 match = -45.0%%
@@ -22,9 +22,9 @@ title = Bộ chăn ga gối pyeoda
 url = https://www.khodemthanhdo.com/collections/bo-chan-ga-goi-phu-pyeoda
 
 [pyeoda.vn]
-match = -95.0%%
-title = PYEODA – Chăn Ga Gối Đệm PYEODA – Như Tình Yêu Của ...
-url = https://pyeoda.vn/
+match = -6.2%%
+title = Hoạt Động PYEODA
+url = https://pyeoda.vn/category/hoat-dong-pyeoda/
 
 [tchome.vn]
 match = -10.0%%
@@ -70,4 +70,9 @@ url = https://vuanem.com/brand/pyeoda
 match = -20.0%%
 title = Bộ ga gối chun chần HQ Pyeoda
 url = https://changagoidemphuongbac.com/bo-ga-goi-chun-chan-hq-pyeoda/
+
+[changagoidemtamhao.com]
+match = -10.0%%
+title = Đệm PYEODA
+url = https://changagoidemtamhao.com/dem-pyeoda
 
