--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-07-18 12:45:59
+lastsearch = 2024-07-18 13:17:34
 
 [www.diepxuan.com]
 match = 42.9%%
-title = Chiếu nhựa Hà Nội 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html
+title = Chiếu nhựa Hà Nội 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-160x200.html
 
 [shopee.vn]
-match = 32.1%%
-title = chiếu nhựa gấp gọn Thái Bình tiện dụng
-url = https://shopee.vn/chiếu-nhựa-gấp-gọn-Thái-Bình-tiện-dụng-i.114438421.3932155248
+match = -25.0%%
+title = Chiếu nhựa gấp gọn size 2m ×3m chiếu ăn cơm hàng đẹp ...
+url = https://shopee.vn/Chiếu-nhựa-gấp-gọn-size-2m-×3m-chiếu-ăn-cơm-hàng-đẹp-nhiều-màu-i.114438421.4732248740
 
 [tiki.vn]
 match = -21.4%%
@@ -22,9 +22,9 @@ title = Chiếu nhựa việt nam 2mx4m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
 
 [www.yellowpages.vn]
-match = -3.6%%
-title = chiếu nhựa, chiếu cói, chiếu tre, chiếu trúc ở tại
-url = https://www.yellowpages.vn/class/490435/chiếu-nhựa,-chiếu-cói,-chiếu-tre,-chiếu-trúc-ở_.html
+match = 0.0%%
+title = danh sách Chiếu Nhựa
+url = https://www.yellowpages.vn/tgcls/10490435/Chiếu-Nhựa.html?j=0
 
 [www.dienmayxanh.com]
 match = -35.7%%
@@ -270,4 +270,19 @@ url = https://thanhtra.gov.vn/web/guest/xem-chi-tiet-tin-tuc?p_p_id=dschutichnew
 match = -36.8%%
 title = news-16-02-2023.xml
 url = https://www.qdnd.vn/sitemaps/0/2023/02/news-16-02-2023.xml
+
+[tchome.vn]
+match = 60.7%%
+title = CHIẾU NHỰA HÀ NỘI 1,6m - TC-HOME
+url = https://tchome.vn/gia-dung-doi-song-chan-chieukhoacoc-chen/chieu-nhua-ha-noi-16m-sp22545.html
+
+[www.maihuyencorp.com]
+match = 21.4%%
+title = Chiếu nhựa Mai Huyền 1.8x2m | maihuyen
+url = https://www.maihuyencorp.com/product-page/chiếu-nhựa-cá-nhân-0-8m-x-1-9m
+
+[online.mmvietnam.com]
+match = 32.1%%
+title = Chiếu du lịch nhựa VM 180*200
+url = https://online.mmvietnam.com/san-pham/mm-ha-dong/chieu-du-lich-nhua-vm-180x200-738170/
 
