--- a/images/ga-ni-long-2m-x-2m2/config.ini
+++ b/images/ga-ni-long-2m-x-2m2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-2m-x-2m2.html
 lastopen = 2024-06-09 23:13:19
 
 [search]
-lastsearch = 2024-07-18 12:18:06
+lastsearch = 2024-07-18 13:42:26
 
 [www.diepxuan.com]
 match = 36.8%%
@@ -12,9 +12,9 @@ title = Ga ni lông 2m x 2m2 - Điệp Xuân
 url = https://www.diepxuan.com/ga-ni-long-2m-x-2m2.html
 
 [shopee.vn]
-match = -105.3%%
-title = ga-chong-tham-1m8-x-2m/8378292534662123005/ ...
-url = https://shopee.vn/search?keyword=ga-chong-tham-1m8-x-2m/8378292534662123005/343220106741734172/ 
+match = -42.1%%
+title = GA CHỐNG THẤM 2M X 2M2 ( LOẠI 1 DÀY DẶN )
+url = https://shopee.vn/GA-CHỐNG-THẤM-2M-X-2M2-(-LOẠI-1-DÀY-DẶN-)-i.13475819.120666839
 
 [www.lazada.vn]
 match = 21.1%%
@@ -37,9 +37,9 @@ title = GA GIƯỜNG CHÍNH HÃNG LE.HOME Sz 1.5m x 2m= ...
 url = https://phuonghoangphat.com/ga-giuong-chinh-hang-le-home sz-1-5m-x-2m-120k-sz-1-8m-x-2m-135k-sz-2m2-x-2m-140k
 
 [suongtuyet.com]
-match = 27.8%%
-title = Mền Băng Lông Mỏng
-url = https://suongtuyet.com/men-long-mong-men-ni-gia-re
+match = 5.3%%
+title = Ra (Ga) Chống Thấm - Đà Nẵng
+url = https://suongtuyet.com/ra-chong-tham
 
 [tiki.vn]
 match = -115.8%%
@@ -94,7 +94,7 @@ url = https://www.kymdan.com/bai-viet/bang-gia-san-pham-kymdan
 [m.facebook.com]
 match = -115.8%%
 title = Chăn Ga Gối Lụa Tencel Cotton - Topper Nệm Cao Cấp H2N
-url = https://m.facebook.com/changagoih2n/photos/a.1218379331561052/3621438297921798/?type=3
+url = https://m.facebook.com/3964606653604959
 
 [www.lamido.vn]
 match = -26.3%%
