--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-18 07:58:28
+lastsearch = 2024-07-18 13:42:37
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/MC_Ren
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfkNHoid&sig=ACfU3U0188-vMwf2GMdiQa5lN5P8GbvU9A&hl=en&sa=X&ved=2ahUKEwj-nqOdsa-HAxXYEzQIHXjyBkYQ6AF6BAgnEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfkPHund&sig=ACfU3U2agyFDkTjhYdQB5NJMfnlHH1weQA&hl=en&sa=X&ved=2ahUKEwiUu-KT_q-HAxX_J0QIHcBEDGAQ6AF6BAgXEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
@@ -62,9 +62,9 @@ title =
 url = https://www.phillyvoice.com/ren-gill-music-mental-health-chronic-illness-/
 
 [www.instagram.com]
-match = -60.0%%
-title = King Ren 👑 (@rentman2016)
-url = https://www.instagram.com/rentman2016/?locale=推特和网络营销的区别＜谷歌推广认证seo8.vip＞3boO&hl=am-et
+match = -100.0%%
+title = The Ren Men (@the_ren_men)
+url = https://www.instagram.com/the_ren_men/
 
 [www.youtube.com]
 match = -133.3%%
