--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-07-18 12:20:03
+lastsearch = 2024-07-18 13:41:01
 
 [m.youtube.com]
 match = -144.4%%
@@ -22,9 +22,9 @@ title = 𝐍𝐞𝐦 𝐜𝐡𝐚̉ 𝐜𝐚́𝐜 𝐥𝐨𝐚̣𝐢 đ𝐚𝐧
 url = https://www.instagram.com/p/C8pRwdDgBbw/
 
 [www.facebook.com]
-match = -83.3%%
-title = Hội người việt ở Kimhe (김해) | 𝐍𝐄𝐌 𝐂𝐇𝐔𝐀
-url = https://www.facebook.com/groups/2515164205371847/posts/𝐍𝐄𝐌-𝐂𝐇𝐔𝐀-𝐕𝐈𝐄̂𝐍-𝐌𝐈𝐍𝐈-𝐎̛́𝐓-𝐗𝐈𝐄̂𝐌-𝐗𝐀𝐍𝐇-14k-500gr-nem-ngon-kèm-ớt-xiêm-xanh-cực-kì-t/3776357239252531/
+match = -105.6%%
+title = NEM CUA BỂ - NGON PHÁT NGHIỆN, TIỆN NẤU NGAY ...
+url = https://www.facebook.com/cuonnrollvn/videos/nem-cua-bể-ngon-phát-nghiện-tiện-nấu-ngay/248935103794915/
 
 [www.tiktok.com]
 match = -127.8%%
@@ -72,8 +72,8 @@ title = U.S. DEPARTMENT OF COMMERCE National Technical ...
 url = https://www.ojp.gov/pdffiles1/Photocopy/93776NCJRS.pdf
 
 [m.facebook.com]
-match = -138.9%%
-title = Nguoi Viet Colorado | 💥 NEM CUA BỂ VUÔNG SIÊU CHẤT ...
+match = -16.7%%
+title = NEM CUA BỂ VUÔNG SIÊU CHẤT LƯỢNG
 url = https://m.facebook.com/groups/213134222458659/posts/1913588515746546/
 
 [www.proz.com]
