--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-07-18 13:25:00
+lastsearch = 2024-07-18 13:38:43
 
 [demxanh.com]
 match = -84.2%%
@@ -17,8 +17,8 @@ title = Tấm Trang Trí Khách Sạn cao cấp giá tốt nhất Hà Nội
 url = https://thegioidemviet.vn/tam-trang-tri-khach-san/
 
 [vinhtuong.com]
-match = -110.5%%
-title = Tấm thạch cao, Tấm xi măng trang trí Vĩnh Tường DECO Plus
+match = -42.1%%
+title = Tấm trang trí Vĩnh Tường DECO Plus® In Lụa
 url = https://vinhtuong.com/tam-trang-tri-vinh-tuong-deco-plus
 
 [www.vietuchotel.vn]
@@ -255,4 +255,9 @@ url = https://noithat-haanh.com/tam-op-tuong-3d-trang-tri-dep-sang-trong-obd0002
 match = -183.3%%
 title = Search
 url = https://gis.harnett.org/portal/home/search.html?t=content&q=tags:"efektler"
+
+[www.booking.com]
+match = -21.1%%
+title = Các Khách Sạn 4 Sao ở Melbourne
+url = https://www.booking.com/fourstars/city/au/melbourne.vi.html
 
