--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-18 12:18:27
+lastsearch = 2024-07-18 13:42:17
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -37,9 +37,9 @@ title = Faculty and Staff | Department of Kinesiology
 url = https://www.sjsu.edu/kinesiology/about-us/faculty-and-staff.php
 
 [profiles.ucsd.edu]
-match = -21.4%%
-title = Louise Laurent
-url = https://profiles.ucsd.edu/louise.laurent
+match = -5.0%%
+title = Gary Vilke - UCSD Profiles
+url = https://profiles.ucsd.edu/gary.vilke
 
 [quicksearch.dla.mil]
 match = -185.7%%
@@ -52,9 +52,9 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = -5.0%%
-title = Frank McCormick, PhD, FRS
-url = https://profiles.ucsf.edu/frank.mccormick
+match = 10.0%%
+title = Nicholas Butowski, MD
+url = https://profiles.ucsf.edu/nicholas.butowski
 
 [www.ncbi.nlm.nih.gov]
 match = -130.0%%
