--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-07-18 13:36:54
+lastsearch = 2024-07-18 14:19:08
 
 [hanvico.com.vn]
-match = 38.1%%
-title = Bộ ga chun LIVING - LV18
-url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv18/
+match = 28.6%%
+title = Bộ ga chun My Youth - MY18
+url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
 
 [foreverbedding.net]
-match = -57.1%%
-title = Bộ ga chun chần mặt Velina V18 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v18
+match = -33.3%%
+title = Bộ ga chun Silky G121 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-silky-g121
 
 [shopee.vn]
 match = -114.3%%
@@ -92,9 +92,9 @@ title = Everon EPC-21053 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
 url = https://www.everonvn.vn/chi-tiet/everon-EPC21053.html
 
 [alnena.vn]
-match = 52.4%%
-title = Bộ Chăn Ga Gối Chun Trần
-url = https://alnena.vn/collections/bo-chan-ga-goi-chun-tran
+match = -61.9%%
+title = Bộ Chăn Ga Gối Chun Trần Alnena 100%% Cotton Mã A21242
+url = https://alnena.vn/products/bo-chan-ga-goi-chun-tran-alnena-100-cotton-ma
 
 [www.lamchame.com]
 match = -128.6%%
