--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-07-18 11:46:28
+lastsearch = 2024-07-18 14:14:34
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -27,9 +27,9 @@ title = Lê Mật Đài Loan Bên E Giao Khách l Đếm Không Hết Quả ...
 url = https://www.youtube.com/watch?v=jnvflW7R2LY
 
 [m.facebook.com]
-match = -3.6%%
-title = TUYỂN DỤNG NHÂN VIÊN SPA, THẨM MỸ VIỆN
-url = https://m.facebook.com/groups/vieclamspa.thammyvien/posts/2573590302849633/
+match = 0.0%%
+title = Công Ty thời trang An Phước cần tuyển
+url = https://m.facebook.com/groups/1139689869483199/permalink/7797867046998748/
 
 [www.dkn.tv]
 match = -21.4%%
@@ -99,7 +99,7 @@ url = https://medlatec.vn/tu-dien-benh-ly/san-day-sbfou
 [www.merckmillipore.com]
 match = 27.3%%
 title = PHIẾU AN TOÀN HÓA CHẤT
-url = https://www.merckmillipore.com/Web-ES-Site/es_ES/-/EUR/ShowDocument-File?ProductSKU=MDA_CHEM-104354&DocumentType=MSD&DocumentId=104354_SDS_VN_VI.PDF&DocumentUID=47184070&Language=VI&Country=VN&Origin=PDP
+url = https://www.merckmillipore.com/Web-JP-Site/ja_JP/-/JPY/ShowDocument-File?ProductSKU=MDA_CHEM-808803&DocumentType=MSD&DocumentId=808803_SDS_VN_VI.PDF&DocumentUID=43004958&Language=VI&Country=VN&Origin=PDP
 
 [www.facebook.com]
 match = -35.7%%
@@ -209,7 +209,7 @@ url = https://www.nuskin.com/content/dam/NuskinVN/Jack_Huynh/Product-Catalogue/E
 [thuvienphapluat.vn]
 match = -57.1%%
 title = Thông tư 15/2016/TT-BYT bệnh nghề nghiệp được hưởng ...
-url = https://thuvienphapluat.vn/van-ban/Bao-hiem/Circular-15-2016-TT-BYT-regulations-occupational-diseases-covered-by-social-insurance-380525.aspx
+url = https://thuvienphapluat.vn/van-ban/Bao-hiem/Thong-tu-15-2016-TT-BYT-benh-nghe-nghiep-duoc-huong-bao-hiem-xa-hoi-319385.aspx
 
 [www.medlatec.vn]
 match = -35.7%%
@@ -225,4 +225,9 @@ url = http://shopcaygiong.vn/san-pham/cay-giong-tao-dai
 match = -32.1%%
 title = An Cung Hàn Quốc Vũ Hoàng Thanh Tâm KwangDong ...
 url = https://sieuthivitaminnhapkhau.vn/?n=10&id=415&/an-cung-han-quoc-vu-hoang-thanh-tam-kwangdong-hop-10-vien
+
+[www.mard.gov.vn]
+match = -166.7%%
+title = BỘ NỘI VỤ
+url = https://www.mard.gov.vn/PublishingImages/Thongbao/CV-5277-KHCN-11082022.pdf
 
