--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-07-18 13:38:32
+lastsearch = 2024-07-18 14:17:08
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -220,4 +220,9 @@ url = http://sieuthibonsai.com/nhung-cay-duyen-tung-dai-loan-trong-tren-gia-the-
 match = 3.6%%
 title = {hrlgz} Vintage drawer knobs etsy
 url = https://www.qcyc.ca/?q=node/109&height=730&scroll=auto&url=https://xn--b1avdibc.xn--p1ai/8713594fe43y
+
+[ansinh.com.vn]
+match = -17.6%%
+title = Tin tức & Sự kiện
+url = http://ansinh.com.vn/News.aspx?NewsID=584&CatID=1&TypeID=1
 
