--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-18 13:21:54
+lastsearch = 2024-07-18 14:12:34
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -27,9 +27,9 @@ title = Learning Hungarian on Duolingo | I was looking for a list ...
 url = https://m.facebook.com/groups/943246729103874/posts/7428405300587952/
 
 [www.instagram.com]
-match = -33.3%%
-title = Adam Mosseri
-url = https://www.instagram.com/mosseri/?hl=en
+match = 4.8%%
+title = Jenna Dewan (@jennadewan)
+url = https://www.instagram.com/jennadewan/?hl=en
 
 [www.imdb.com]
 match = -23.8%%
@@ -107,9 +107,9 @@ title = Rover.com: Book Dog Boarding, Dog Walking and More
 url = http://www.rover.com/
 
 [www.youtube.com]
-match = -23.8%%
-title = Edith Piaf - Non, Je ne regrette rien
-url = https://www.youtube.com/watch?v=Q3Kvu6Kgp88
+match = -71.4%%
+title = Extreme - More Than Words (Official Music Video)
+url = https://www.youtube.com/watch?v=UrIiLvg58SY
 
 [www.epa.gov]
 match = -19.0%%
@@ -370,4 +370,9 @@ url = https://archive.ccwatershed.org/media/pdfs/14/02/17/10-18-21_0.pdf
 match = -76.2%%
 title = Disulfide cross-linking of caldesmon to actin.
 url = https://www.jbc.org/content/266/30/20305.full.pdf
+
+[www.europarl.europa.eu]
+match = -119.0%%
+title = Verbatim report of proceedings - Tuesday, 16 September 2014
+url = https://www.europarl.europa.eu/doceo/document/CRE-8-2014-09-16_EN.html
 
