--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm.h
 lastopen = 2024-06-30 21:10:28
 
 [search]
-lastsearch = 2024-07-18 09:02:13
+lastsearch = 2024-07-18 14:19:19
 
 [www.everonvn.vn]
 match = 7.4%%
@@ -22,8 +22,8 @@ title = Nệm lò xo Kingkoil Cloud Firm
 url = https://nemragoi.com/nem-lo-xo-kingkoil-cloud-firm.html
 
 [everonkorea.com]
-match = 31.8%%
-title = Đệm lò xo Kingkoil Cloud Pillow Top cao 27cm
+match = 14.9%%
+title = Đệm lò xo Kingkoil Cloud Pillow Top cao 27cm - Everon Korea
 url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-pillow-top/
 
 [everon.com.vn]
@@ -42,19 +42,19 @@ title = Nệm Lò Xo Everon - Đà Nẵng
 url = https://suongtuyet.com/nem-lo-xo-everon
 
 [www.everonqb.com]
-match = -270.0%%
-title = Nệm Everon
-url = https://www.everonqb.com/catalog/category/view/s/n-m-everon/id/2013/
+match = 23.4%%
+title = Everon Quảng Bình Nệm lò xo Everon Bonnell 160x200x23
+url = https://www.everonqb.com/nem-lo-xo-everon-bonnell-160x200x23.html
 
 [www.diepxuan.com]
-match = 31.1%%
-title = Điệp Xuân Nệm lò xo Everon Bonnell 200x220x23
-url = https://www.diepxuan.com/nem-lo-xo-everon-bonnell-200x220x23.html
+match = 36.2%%
+title = Điệp Xuân Nệm lò xo Everon Kingkoil Cloud Firm 160x200x27
+url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-160x200x27.html
 
 [everon.online]
-match = 38.3%%
-title = Bảng Giá Đệm Lò Xo Everon King Koil Chính Hãng Giảm ...
-url = https://everon.online/blogs/news/bang-gia-dem-lo-xo-everon-king-koil-chinh-hang-giam-gia-tot-nhat
+match = 31.9%%
+title = Đệm Lò Xo King Koil - Bảng Giá Các Sản Phẩm ...
+url = https://everon.online/collections/dem-lo-xo-king-koil
 
 [everonvn.com.vn]
 match = 25.6%%
