CI images update

--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-07-18 14:13:07
+lastsearch = 2024-07-18 14:46:51
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -239,7 +239,7 @@ url = http://www.tuyensinh.dau.edu.vn/poc/kèo-nhà-cá.html
 [www.cothongminh.com]
 match = -26.7%%
 title = Lịch học Cờ Vua cho trẻ em
-url = https://www.cothongminh.com/tai-lieu-hoc-co-vua/220-lich-hoc-co-vua-cho-tre-em.html
+url = https://www.cothongminh.com/tai-lieu-hoc-co-vua/24-hoc-co-vua-co-ban/220-lich-hoc-co-vua-cho-tre-em
 
 [nhanh.vn]
 match = -233.3%%
