--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-18 13:21:43
+lastsearch = 2024-07-18 14:45:18
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -37,9 +37,9 @@ title = Trẻ 8 tháng tuổi: Phát triển thể chất, vận động, nhận
 url = https://www.vinmec.com/vi/tin-tuc/thong-tin-suc-khoe/nhi/tre-8-thang-tuoi-phat-trien-chat-van-dong-nhan-thuc-va-cam-xuc/
 
 [www.google.com]
-match = -112.5%%
-title = maps/@21.001139,105.847882,17z?hl=vi
-url = https://www.google.com/maps/@21.001139,105.847882,17z?hl=vi
+match = -200.0%%
+title = https://www.google.com/maps/@21.0506866,105.804746...
+url = https://www.google.com/maps/@21.0506866,105.8047464,19z?hl=vi
 
 [thongtindoingoai.caobang.gov.vn]
 match = -212.5%%
@@ -282,9 +282,9 @@ title = Địa chấn lớn nhất EURO 2024: Georgia đánh bại Bồ Đào ..
 url = https://baolongan.vn/dia-chan-lon-nhat-euro-2024-georgia-danh-bai-bo-dao-nha-khien-ronaldo-hoan-toan-tat-tieng-a178337.html
 
 [vietstock.vn]
-match = -218.8%%
-title = Phân tích kỹ thuật phiên chiều 16/07: Tâm lý lạc quan quay ...
-url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-1607-tam-ly-lac-quan-quay-tro-lai-585-1207761.htm
+match = -225.0%%
+title = Phân tích kỹ thuật phiên chiều 18/07: Tâm lý thận trọng bao ...
+url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-1807-tam-ly-than-trong-bao-trum-thi-truong-585-1208616.htm
 
 [baohungyen.vn]
 match = -200.0%%
@@ -347,9 +347,9 @@ title = Lịch phát sóng chương trình VTV
 url = https://vtv.vn/lich-phat-song.htm
 
 [vnexpress.net]
-match = -162.5%%
-title = Kế độc với gia đình của ông bố mê muội người tình
-url = https://vnexpress.net/ke-doc-dep-bo-chuong-ngai-cua-ong-bo-va-nhan-tinh-4760308.html
+match = -118.8%%
+title = Doanh nhân Mỹ dần bỏ golf, chơi pickleball
+url = https://vnexpress.net/doanh-nhan-my-dan-bo-golf-choi-pickleball-4771425.html
 
 [cand.com.vn]
 match = -87.5%%
