--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-07-18 13:17:34
+lastsearch = 2024-07-18 14:49:30
 
 [www.diepxuan.com]
 match = 42.9%%
-title = Chiếu nhựa Hà Nội 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-160x200.html
+title = Chiếu nhựa Hà Nội 150x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html
 
 [shopee.vn]
 match = -25.0%%
@@ -37,9 +37,9 @@ title = LỊCH HỘI CHỢ VÀ TRIỂN LÃM THƯƠNG MẠI TẠI HÀ NỘI ...
 url = https://tradepro.vn/vi/hoi-cho-trien-lam/ha-noi
 
 [www.sendo.vn]
-match = 28.6%%
-title = Chiếu nhựa gấp gọn hàng việt nam - hj10
-url = https://www.sendo.vn/chieu-nhua-gap-gon-hang-viet-nam-46738502.html
+match = -7.1%%
+title = Chiếu Nhựa Văn Phòng Bền Đẹp, Rẻ Như Tặng, Chất ...
+url = https://www.sendo.vn/chieu-nhua-van-phong.htm
 
 [mia.vn]
 match = -39.3%%
