--- a/images/bo-ga-goi-chun-chan-happy-16/config.ini
+++ b/images/bo-ga-goi-chun-chan-happy-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 lastopen = 2024-06-06 16:51:08
 
 [search]
-lastsearch = 2024-07-18 05:15:12
+lastsearch = 2024-07-18 15:20:40
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,14 +12,14 @@ title = Bộ ga gối chun chan happy 16
 url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 
 [www.facebook.com]
-match = 9.5%%
-title = Chăn Ga Gối Đệm GRAND
-url = https://www.facebook.com/grandhanhphucgiandon/
+match = -27.8%%
+title = Happiness Việt Nam
+url = https://www.facebook.com/changahappinessvn/
 
 [shopee.vn]
-match = -32.1%%
-title = Bộ chăn ga gối, ga giường, vỏ chăn, vỏ gối drap nệm ga ...
-url = https://shopee.vn/Bộ-chăn-ga-gối-ga-giường-vỏ-chăn-vỏ-gối-drap-nệm-ga-chun-ra-giường-chăn-ga-gối-đệm-Happy-Home-i.600110082.15146634205
+match = -21.4%%
+title = bộ ga chun poly giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=bộ ga chun poly
 
 [chandem.com.vn]
 match = 17.9%%
@@ -62,9 +62,9 @@ title = Bộ chăn ga Everon SR-16
 url = https://everonvn.com.vn/everon/2248/bo-chan-ga-everon-sr-16
 
 [tiki.vn]
-match = -35.7%%
-title = Ga bọc đệm hàng chính hãng, giao nhanh - Tháng 7, 2024
-url = https://tiki.vn/search?q=ga bọc đệm
+match = 17.9%%
+title = Bộ chăn ga gối hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=bộ chăn ga gối
 
 [changagoidemsonghong.com]
 match = 0.0%%
