--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-07-18 11:49:38
+lastsearch = 2024-07-18 15:22:37
 
 [www.everonvn.vn]
 match = 20.0%%
@@ -140,4 +140,9 @@ url = https://www.sieuthinem.vn/nem-everon.html
 match = -45.0%%
 title = Chăn Ga Gối Nệm Everon Chính Hãng Giá Rẻ
 url = https://vuanem.com/brand/everon
+
+[www.khodemthanhdo.com]
+match = -20.0%%
+title = Đệm bông ép everon hàn quốc vỏ gấm
+url = https://www.khodemthanhdo.com/products/dem-bong-ep-everon-han-quoc-vo-gam
 
