--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-07-18 10:44:56
+lastsearch = 2024-07-18 15:24:03
 
 [www.lazada.vn]
 match = -61.1%%
@@ -12,9 +12,9 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -116.7%%
-title = Lỡ yêu siêu phẩm "NEM NƯỚNG NHA TRANG... - Món ...
-url = https://www.facebook.com/diadiemanngonhaiphong/posts/3559769804039742/
+match = -61.1%%
+title = NEM Fashion - ÁO KHOÁC LÔNG VŨ SIÊU NHẸ
+url = https://www.facebook.com/nemfashion.official/posts/áo-khoác-lông-vũsiêu-nhẹ-siêu-ấm-chỉ-từ-𝟏𝟏𝟗𝟗𝐊-với-xu-thế-phát-triển-của-thời-tra/1942429895894902/
 
 [thegioinem.com]
 match = 23.5%%
