CI images update

--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-07-18 11:16:22
+lastsearch = 2024-07-18 15:35:03
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -32,9 +32,9 @@ title = Bộ chăn ga gối TTN 14 (120*190 cm) - Koala
 url = https://koala.vn/bo-chan-ga-goi-ttn-14.html
 
 [changagoidemsonghong.com]
-match = -28.6%%
-title = Bộ chăn ga gối 100%% cotton mã mầu BC22-066
-url = https://changagoidemsonghong.com/chan-ga-goi-bc66
+match = -19.0%%
+title = Chăn ga gối Sông Hồng dòng Basic mã BC-14
+url = https://changagoidemsonghong.com/chan-ga-goi-bc14
 
 [songhong.info]
 match = -19.0%%
@@ -52,9 +52,9 @@ title = Bộ chăn ga gối Everon Lite EVE14
 url = https://everonletrongtan.com/bo-chan-ga-goi-everon-lite-eve14
 
 [foreverbedding.net]
-match = -33.3%%
-title = Bộ ga chun Velina V14 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-velina-v14
+match = -66.7%%
+title = Bộ ga chun chần mặt Elegant H140 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-chan-mat-elegant-h140
 
 [changmibedding.com]
 match = -33.3%%
@@ -102,7 +102,17 @@ title = Bộ Drap Gối Cotton Màu - 14
 url = https://mym.com.vn/bo-drap-goi-cotton-mau-14
 
 [www.everonvn.vn]
+match = -114.3%%
+title = Everon EST-22034 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-est22034.html
+
+[kenhsinhvien.vn]
+match = -119.0%%
+title = Siêu khuyến mãi chỉ trong ngày hôm nay - Bộ chăn ga gối ...
+url = https://kenhsinhvien.vn/t/sieu-khuyen-mai-chi-trong-ngay-hom-nay-bo-chan-ga-goi-200k-chi-con-99k.442154/
+
+[thegioidemonline.com]
 match = -71.4%%
-title = Bảng giá chi tiết bộ vỏ chăn ga gối Everon EP 1725
-url = https://www.everonvn.vn/chi-tiet/Everon-EP1725.html
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần mẫu 14
+url = https://thegioidemonline.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-mau-14.html
 
