--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-18 14:52:14
+lastsearch = 2024-07-18 15:35:47
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu trúc thai đen14
 url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 
 [demxanh.com]
-match = -28.6%%
-title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
-url = https://demxanh.com/bang-gia-chieu-truc-2018.html
+match = -76.2%%
+title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
+url = https://demxanh.com/chieu-truc.html
 
 [www.lazada.vn]
 match = -81.0%%
@@ -437,9 +437,9 @@ title = Lương hưu mới được chi trả tới hơn 60%% người hưởng
 url = https://cafef.vn/luong-huu-moi-duoc-chi-tra-toi-hon-60-nguoi-huong-188240702055151499.chn
 
 [baobinhphuoc.com.vn]
-match = -114.3%%
-title = Từ nay đến cuối năm xuất hiện 5-7 cơn bão ảnh hưởng ...
-url = https://baobinhphuoc.com.vn/news/9/159885/tu-nay-den-cuoi-nam-xuat-hien-5-7-con-bao-anh-huong-truc-tiep-den-viet-nam
+match = 9.5%%
+title = Binh đoàn 16 thông báo
+url = https://baobinhphuoc.com.vn/news/249/160213/binh-doan-16-thong-bao
 
 [baoyenbai.com.vn]
 match = -114.3%%
