--- a/images/chieu-dieu-hoa-co-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 lastopen = 2024-06-06 16:54:53
 
 [search]
-lastsearch = 2024-07-18 14:50:38
+lastsearch = 2024-07-18 15:38:16
 
 [shopee.vn]
-match = -41.7%%
-title = Chiếu Điều Hòa Lụa Dày các cỡ 1.2m - 1.5m - 1.6m - 1.8m
-url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Dày-các-cỡ-1.2m-1.5m-1.6m-1.8m-2m-i.331106991.12046528350
+match = 0.0%%
+title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
+url = https://shopee.vn/list/chiếu điều hòa
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -37,9 +37,9 @@ title = Top 3 loại chiếu điều hòa cao cấp nhất thị trường - Kyo
 url = https://kyoryo.vn/tin-tuc/top-3-loai-chieu-dieu-hoa-cao-cap-nhat-thi-truong-.html
 
 [sieuthidem.vn]
-match = 16.7%%
-title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
-url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/
+match = 50.0%%
+title = Chiếu điều hoà Tencel - Hà Nội
+url = https://sieuthidem.vn/product-category/chan-ga-goi/chieu-dieu-hoa-tencel/
 
 [cungnhaulamgiau.vn]
 match = 4.2%%
@@ -67,9 +67,9 @@ title = Nằm chiếu điều hoà có tốt cho sức khoẻ không?
 url = https://thegioinem.com/nam-chieu-dieu-hoa-co-tot-cho-suc-khoe-khong.html
 
 [foreverbedding.net]
-match = -20.8%%
-title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
-url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
+match = 37.5%%
+title = Chiếu điều hòa - Forever Bedding
+url = https://foreverbedding.net/chieu-dieu-hoa
 
 [joliefam.vn]
 match = -37.5%%
@@ -140,4 +140,9 @@ url = https://chieutrelinhchi.com/chieu-may-dieu-hoa/chieu-dieu-hoa-soi-may-kich
 match = -58.3%%
 title = Hướng dẫn giặt chiếu điều hòa đúng cách, đơn giản, hiệu ...
 url = https://spacet.vn/blog/nguon-cam-hung/huong-dan-giat-chieu-dieu-hoa-dung-cach-don-gian-hieu-qua
+
+[chieutruc.info]
+match = -91.7%%
+title = Chiếu điều hòa các loại chiếu mây, chiếu lụa, chiếu tencel tại ...
+url = https://chieutruc.info/chieu-dieu-hoa/
 
