--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-18 00:49:00
+lastsearch = 2024-07-18 15:38:46
 
 [www.gov.uk]
 match = -200.0%%
@@ -905,4 +905,9 @@ url = https://www.reno.gov/
 match = -26.7%%
 title = Governor of California
 url = https://www.gov.ca.gov/
+
+[jointheepic.com]
+match = -73.3%%
+title = Epic Extras Archives - Trang 16 trên 31
+url = https://jointheepic.com/vi/category/epic-extras/page/16/
 
