--- a/images/chieu-lac-soc-10/config.ini
+++ b/images/chieu-lac-soc-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-10.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-18 15:40:09
+lastsearch = 2024-07-18 15:49:16
 
 [www.chieulongdinh.com.vn]
 match = -93.8%%
@@ -92,9 +92,9 @@ title = Nóp cỏ bàng và chiếu lác - Tạp chí Văn Hóa & Phát Triển
 url = https://baomoi.com/nop-co-bang-va-chieu-lac-c40335029.epi
 
 [books.google.com]
-match = -212.5%%
-title = 20 Tác Phẩm Ôn Thi Vào Lớp 10 Môn Văn - Google Books Result
-url = https://books.google.com/books?id=7-4EEQAAQBAJ&pg=PT18&lpg=PT18&dq=chieu+lac+soc+10&source=bl&ots=E378eGNLex&sig=ACfU3U2Xkjk3zK6EtcZOsNqKTLiZe3JR0w&hl=en&sa=X&ved=2ahUKEwi2iePera2HAxUTg4kEHeicBn0Q6AF6BAgeEAM
+match = -231.2%%
+title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
+url = https://books.google.com/books?id=QLDaAAAAMAAJ&pg=RA4-PA7&lpg=RA4-PA7&dq=chieu+lac+soc+10&source=bl&ots=1UvbpAneBm&sig=ACfU3U1a27jubcgwq3Bhi5WafULyHj8xjg&hl=en&sa=X&ved=2ahUKEwiEsfm6mrCHAxWRI0QIHchvBDsQ6AF6BAgfEAM
 
 [thanglong.chinhphu.vn]
 match = -156.2%%
