--- a/images/chieu-truc-thai-den15/config.ini
+++ b/images/chieu-truc-thai-den15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den15.html
 lastopen = 2024-06-07 00:18:02
 
 [search]
-lastsearch = 2024-07-18 13:44:26
+lastsearch = 2024-07-18 15:51:11
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -122,9 +122,9 @@ title = Nâng cao bảo mật, an toàn giao dịch không tiền mặt
 url = https://tapchinganhang.gov.vn/nang-cao-bao-mat-an-toan-giao-dich-khong-tien-mat.htm
 
 [baomoi.com]
-match = -109.5%%
-title = Đóng cửa nhóm giữ trẻ tự phát có dấu hiệu bạo hành trẻ em
-url = https://baomoi.com/dong-cua-nhom-giu-tre-tu-phat-co-dau-hieu-bao-hanh-tre-em-c49597733.epi
+match = -76.2%%
+title = Xuất nhập khẩu hàng hóa vượt mốc 400 tỷ USD
+url = https://baomoi.com/xuat-nhap-khau-hang-hoa-vuot-moc-400-ty-usd-c49666710.epi
 
 [suckhoedoisong.vn]
 match = -114.3%%
@@ -162,9 +162,9 @@ title = U19 Việt Nam thua U21 Avenir 0-1 trước giải Đông Nam Á ...
 url = https://vietnamnet.vn/u19-viet-nam-thua-u21-avenir-0-1-truoc-giai-dong-nam-a-2024-2300572.html
 
 [nbtv.vn]
-match = -119.0%%
-title = Lịch thi đấu Euro 2024 hôm nay (18-6): Ronaldo xuất trận
-url = https://nbtv.vn/news/41096/lich-thi-dau-euro-2024-hom-nay-18-6-ronaldo-xuat-tran
+match = -114.3%%
+title = Bộ Nội vụ đề xuất quy định mới về miễn nhiệm cán bộ, ...
+url = https://nbtv.vn/bo-noi-vu-de-xuat-quy-dinh-moi-ve-mien-nhiem-can-bo-cong-chuc-bi-ky-luat-75851.html
 
 [vtv.vn]
 match = -133.3%%
@@ -207,9 +207,9 @@ title = Tai nghe Focal Azurys (Chụp tai, Jack 3.5mm)
 url = https://hdradio.vn/tai-nghe-focal-azurys.html
 
 [vnba.org.vn]
-match = -109.5%%
-title = Hoạt động của các hội viên phía Nam từ ngày 08/7 đến ...
-url = https://vnba.org.vn/vi/hoat-dong-cua-cac-hoi-vien-phia-nam-tu-ngay-08-7-den-ngay-12-7-2024-14798.htm
+match = -114.3%%
+title = Thúc đẩy thanh toán không tiền mặt tại Việt Nam bằng ...
+url = https://vnba.org.vn/vi/thuc-day-thanh-toan-khong-tien-mat-tai-viet-nam-bang-cong-nghe-tien-tien-14830.htm
 
 [haiquanonline.com.vn]
 match = -109.5%%
@@ -375,4 +375,19 @@ url = https://tienphong.vn/vu-4-nguoi-viet-tu-vong-o-thai-lan-me-chuyen-gia-tran
 match = -9.5%%
 title = iPhone 13 - Thông Số Kỹ Thuật
 url = https://www.apple.com/vn/iphone-13/specs/
+
+[www.tinnhanhchungkhoan.vn]
+match = -133.3%%
+title = Xuất nhập khẩu đến ngày 15/7 vượt 402 tỷ USD, xuất siêu ...
+url = https://www.tinnhanhchungkhoan.vn/xuat-nhap-khau-den-ngay-157-vuot-402-ty-usd-xuat-sieu-gan-12-ty-usd-post349658.html
+
+[danang.gov.vn]
+match = -95.2%%
+title = Chủ tịch HĐND thành phố tiếp công dân định kỳ tháng 7
+url = https://danang.gov.vn/web/guest/chinh-quyen/chi-tiet?id=59823&_c=3
+
+[congan.binhthuan.gov.vn]
+match = -114.3%%
+title = Tập hợp thông tin báo chí phản ánh liên quan đến tình ...
+url = https://congan.binhthuan.gov.vn/tap-hop-thong-tin-bao-chi-phan-anh-lien-quan-den-tinh-hinh-antt-ngay-1772024-N2656.aspx
 
