CI images update

--- a/images/bo-ga-phu-warmdream-freesize-phi-lua/config.ini
+++ b/images/bo-ga-phu-warmdream-freesize-phi-lua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-phu-warmdream-freesize-phi-lua.html
 lastopen = 2024-06-10 00:45:38
 
 [search]
-lastsearch = 2024-07-18 13:40:12
+lastsearch = 2024-07-18 16:13:01
 
 [changagoidem.co]
 match = 8.3%%
@@ -65,4 +65,9 @@ url = https://cungnhaulamgiau.vn/set-ga-goi-lua-dream-city-nhap-khau_p8127
 match = 8.3%%
 title = Brazilian portuguese translation to the game
 url = https://forum.generationzero.com/t/brazilian-portuguese-translation-to-the-game/22748
+
+[www.tripadvisor.com]
+match = -38.9%%
+title = Awesome price and sufficient falicity altho small - Review ...
+url = https://www.tripadvisor.com/ShowUserReviews-g17588730-d1606563-r384810688?m=68573
 
