--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-07-18 06:52:31
+lastsearch = 2024-07-18 16:21:37
 
 [changagoidemsonghong.com]
-match = 33.3%%
-title = Bộ chăn ga gối 100%% cotton mã mầu BC22-066
-url = https://changagoidemsonghong.com/chan-ga-goi-bc66
+match = 18.5%%
+title = chăn ga gối cotton cao cấp Archives
+url = https://changagoidemsonghong.com/chan-ga-goi-cotton-cao-cap
 
 [demhong.vn]
 match = 11.1%%
@@ -72,9 +72,9 @@ title = Chăn ga gối Sông Hồng Urban mã mầu UC16
 url = https://bedding.vn/chan-ga-goi-song-hong-uc16/
 
 [shopee.vn]
-match = -40.7%%
-title = bộ chăn ga gối cotton poly giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=bộ chăn ga gối cotton poly
+match = -37.0%%
+title = Bộ chăn ga và vỏ gối hè thu gọn nhẹ , Mền Ga Gối Poly ...
+url = https://shopee.vn/Bộ-chăn-ga-và-vỏ-gối-hè-thu-gọn-nhẹ-Mền-Ga-Gối-Poly-cotton-chần-bông-3-lớp-i.78513158.15278376186
 
 [lynconcept.com]
 match = -25.9%%
@@ -152,9 +152,9 @@ title = Chăn ga gối Sông Hồng Urban mã mầu UC16 - Đệm Thiên Kim
 url = https://demthienkim.com/chan-ga-goi-song-hong-uc16/
 
 [elmichsleep.vn]
-match = -11.1%%
-title = Bộ chăn ga 100%% Cotton Sateen - Elmich Dr.Sleep
-url = https://elmichsleep.vn/bo-chan-ga-100-cotton-sateen
+match = -18.5%%
+title = Bộ chăn ga 100%% Cotton Ranforce - Elmich Dr.Sleep
+url = https://elmichsleep.vn/bo-chan-ga-100-cotton-ranforce
 
 [khodemgiagoc.com]
 match = -37.0%%
