--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-18 14:20:02
+lastsearch = 2024-07-18 16:18:35
 
 [www.tiktok.com]
 match = -41.2%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -123.5%%
-title = The army list - Page 234 - Google Books Result
-url = https://books.google.com/books?id=tfANAAAAQAAJ&pg=RA2-PA234&lpg=RA2-PA234&dq=man+in+hoa+dep+16&source=bl&ots=vQE8aUwqSF&sig=ACfU3U0lRCZjqmRRoCARE-74cmd8bKxe6Q&hl=en&sa=X&ved=2ahUKEwiEq47Bgq-HAxWVFDQIHXV9C_EQ6AF6BAgfEAM
+match = -194.1%%
+title = Bradshaw's General Railway and Steam Navigation Guide for ...
+url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+16&source=bl&ots=rUQ5yxDA22&sig=ACfU3U2D_dBYcLaYwZo3T9KDp5zbVdK2lg&hl=en&sa=X&ved=2ahUKEwi65eiBobCHAxVMEFkFHeViDpcQ6AF6BAgcEAM
 
 [tax.vermont.gov]
 match = -29.4%%
