CI images update

--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-18 13:23:41
+lastsearch = 2024-07-18 17:15:19
 
 [scholar.google.com]
 match = -43.8%%
@@ -92,9 +92,9 @@ title = maps/@21.001139,105.847882,17z?hl=vi
 url = https://www.google.com/maps/@21.001139,105.847882,17z?hl=vi
 
 [www.facebook.com]
-match = -168.8%%
-title = Sáng nay ngày 16/7, Ngày hội Bác... - Theanh28 ...
-url = https://www.facebook.com/story.php/?story_fbid=794833859498385&id=100069153349307
+match = -87.5%%
+title = Tất cả 8 thành viên Stray Kids (bao ...
+url = https://www.facebook.com/lacsaubich/photos/tất-cả-8-thành-viên-stray-kids-tái-ký-hợp-đồng-với-jypchiều-ngày-187-jyp-vui-mừn/807363144852806/
 
 [www.cgv.vn]
 match = -143.8%%
@@ -117,9 +117,9 @@ title = THUẬN PHÁO MAI HOA TUYỀN PHÁ HOÀNH XE TẬP 18
 url = https://www.youtube.com/watch?v=5tAzMm3oK7w
 
 [books.google.com]
-match = -250.0%%
-title = Tập Thơ Truyện Hồn Lang Về Cõi Thế - Page 18 - Google Books Result
-url = https://books.google.com/books?id=ePhiEAAAQBAJ&pg=PA18&lpg=PA18&dq=chieu+lac+soc+18&source=bl&ots=lke4w-Kmsm&sig=ACfU3U1VsK5A4DIs5L9qlMj8fOmI1U7pzw&hl=en&sa=X&ved=2ahUKEwiYv-_1-a-HAxU3AHkGHcFWDK0Q6AF6BAgiEAM
+match = -87.5%%
+title = NCĐT số 774: Lạc Lối Trong Mạng Xã Hội
+url = https://books.google.com/books?id=TQpuEAAAQBAJ&pg=PA6&lpg=PA6&dq=chieu+lac+soc+18&source=bl&ots=HENPV_46SE&sig=ACfU3U3Cz2z1t_AUUF_8Qt-V1zCr7b_lUw&hl=en&sa=X&ved=2ahUKEwjy1IXZrbCHAxUM48kDHfBJDXUQ6AF6BAgdEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
