--- a/images/nem-di-a-mon-7f-14-tc/config.ini
+++ b/images/nem-di-a-mon-7f-14-tc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-7f-14-tc.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-07-18 15:32:37
+lastsearch = 2024-07-18 17:16:34
 
 [www.diepxuan.com]
 match = -33.3%%
@@ -295,4 +295,19 @@ url = http://e-docs.southmiamifl.gov/WebLink/DocView.aspx?id=2445&undefined
 match = -38.1%%
 title = UNASSIGNED STANDINGS - Iowa Legislature
 url = https://www.legis.iowa.gov/docs/publications/SCGR/1444380.pdf
+
+[www2.irwindaleca.gov]
+match = -11.1%%
+title = Laserfiche WebLink
+url = https://www2.irwindaleca.gov/WebLink/0/doc/311889/Page64.aspx
+
+[docs.dsl.state.or.us]
+match = -11.1%%
+title = Laserfiche WebLink
+url = https://docs.dsl.state.or.us/PublicReview/DocView.aspx?dbid=0&id=866078
+
+[www.villa1929.org]
+match = -9.5%%
+title = PIUS X HYMNAL 1953 ORGANIST
+url = https://www.villa1929.org/uploaded/photos/Alumni/Alumni_Corner/PiusXHymnal_Full_Version.pdf
 
