--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-18 15:37:56
+lastsearch = 2024-07-18 17:17:08
 
 [www.tui.co.uk]
-match = -33.3%%
-title = Holiday Types 2024/25
-url = https://www.tui.co.uk/holidays
+match = -250.0%%
+title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
+url = https://www.tui.co.uk/
 
 [uk.trip.com]
 match = -233.3%%
@@ -340,4 +340,9 @@ url = https://shipsmonthly.com/news/tui-cruises-eighth-newbuild-named-mein-schif
 match = -333.3%%
 title = Tui tells customers it has learned from flight delays and ...
 url = https://www.theguardian.com/business/2022/jun/14/tui-flight-delays-cancellations-travel
+
+[www.nature.com]
+match = -333.3%%
+title = Risk factors associated with the severity of overactive ...
+url = https://www.nature.com/articles/s41598-024-67326-w
 
