--- a/images/vo-goi-ke-warmdream-45x65-hq/config.ini
+++ b/images/vo-goi-ke-warmdream-45x65-hq/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/vo-goi-ke-warmdream-45x65-hq.html
 lastopen = 2024-07-01 10:42:00
 
 [search]
-lastsearch = 2024-07-18 16:20:47
+lastsearch = 2024-07-18 17:21:34
 
 [www.diepxuan.com]
-match = 35.7%%
-title = Vỏ gối kê màu 45x65 - Điệp Xuân
+match = 28.6%%
+title = Điệp Xuân Vỏ gối kê màu 45x65
 url = https://www.diepxuan.com/vo-goi-ke-mau-45x65.html
 
 [www.head-fi.org]
-match = 8.0%%
-title = Box caps in CMOY | Page 3
-url = https://www.head-fi.org/threads/box-caps-in-cmoy.216005/page-3
+match = -35.7%%
+title = Voarmaks Memory Foam Ear Pads for Hifiman Arya/ ...
+url = https://www.head-fi.org/threads/voarmaks-memory-foam-ear-pads-for-hifiman-arya-ananda-xs.969586/
 
 [www.youtube.com]
 match = -75.0%%
