--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-18 16:47:01
+lastsearch = 2024-07-18 17:22:06
 
 [www.facebook.com]
 match = -141.2%%
@@ -149,7 +149,7 @@ url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5773022/
 [books.google.com]
 match = -7.7%%
 title = Index Medicus
-url = https://books.google.com/books?id=NWRDNsmrI_IC&pg=PA4034&lpg=PA4034&dq=chan+4+kg+mao+tan&source=bl&ots=n2SqejYvqJ&sig=ACfU3U0dMGT3fuyOYLIsMb21gu8S5qMtsg&hl=en&sa=X&ved=2ahUKEwjjm7L9v6-HAxWQkokEHfNrDWgQ6AF6BAglEAM
+url = https://books.google.com/books?id=NWRDNsmrI_IC&pg=PA4034&lpg=PA4034&dq=chan+4+kg+mao+tan&source=bl&ots=n2SqemYumH&sig=ACfU3U2hBJYa-bDnsbyWxcm5j8hGNcIG_w&hl=en&sa=X&ved=2ahUKEwjm7fKar7CHAxXS38kDHeT0A3EQ6AF6BAghEAM
 
 [s.click.aliexpress.com]
 match = -141.2%%
