--- a/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-18.html
 lastopen = 2024-06-10 00:19:48
 
 [search]
-lastsearch = 2024-07-18 15:19:01
+lastsearch = 2024-07-18 17:14:22
 
 [demxanh.com]
-match = 38.2%%
-title = Chiếu điều hòa cao su non vỏ bọc vải Tencel
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non.html
+match = 11.8%%
+title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [shopee.vn]
 match = 26.5%%
@@ -97,9 +97,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [www.lazada.vn]
-match = -5.9%%
-title = Chiếu điều hòa cao su non 3D, Chiếu điều hoà tặng kèm 2 ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-3d-chieu-dieu-hoa-tang-kem-2-vo-goi-dung-cho-mua-he-thoang-mat-da-nang-i2213525438.html
+match = 2.9%%
+title = Size 1.8x2m - Chiếu điều hòa tencel từ cao su non êm mát
+url = https://www.lazada.vn/products/size-18x2m-chieu-dieu-hoa-tencel-tu-cao-su-non-em-mat-khong-kem-vo-goi-chat-chon-mau-dang-khoa-79-chieu-dieu-hoa-cao-su-non-chieu-cao-su-chieu-tencel-chieu-mat-mua-he-i786966766.html
 
 [ru9.vn]
 match = 8.8%%
