--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-18 15:22:58
+lastsearch = 2024-07-18 17:18:25
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -72,9 +72,9 @@ title = Tuyệt chiêu chống rụng quả cho cây cam | VTC16
 url = https://www.youtube.com/watch?v=D5B7MtNy_kM
 
 [books.google.com]
-match = -231.2%%
-title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
-url = https://books.google.com/books?id=vqdQAQAAIAAJ&pg=RA2-PA56&lpg=RA2-PA56&dq=chieu+lac+soc+16&source=bl&ots=KcLrI6tV6e&sig=ACfU3U0DxdxOsnIlcUtZ2m10mW2JV2pKbA&hl=en&sa=X&ved=2ahUKEwjjtLzKlLCHAxXFFFkFHRQiBIgQ6AF6BAggEAM
+match = -168.8%%
+title = Địa chí Thái Nguyên - Page 368 - Google Books Result
+url = https://books.google.com/books?id=U0ZRAQAAMAAJ&pg=PA368&lpg=PA368&dq=chieu+lac+soc+16&source=bl&ots=z7JZsT3mXn&sig=ACfU3U0smpM_sOitM8sW_HLsClXtGGSU8w&hl=en&sa=X&ved=2ahUKEwjDpOWxrrCHAxXdL9AFHYJaDXAQ6AF6BAgiEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
