--- a/images/chieu-nhua-thai-binh-12/config.ini
+++ b/images/chieu-nhua-thai-binh-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-12.html
 lastopen = 2024-06-10 00:20:10
 
 [search]
-lastsearch = 2024-07-18 13:43:25
+lastsearch = 2024-07-18 17:21:12
 
 [shopee.vn]
 match = -65.2%%
@@ -17,9 +17,9 @@ title = Chiếu Nhựa Thái Bình | Thanh Hóa
 url = https://www.facebook.com/chieunhuathaibinh/
 
 [www.sendo.vn]
-match = -69.6%%
-title = Chiếu Cói Thái Bình Siêu Tốt, Giá Gốc, Thanh Toán Khi ...
-url = https://www.sendo.vn/chieu-coi-thai-binh.htm
+match = -8.7%%
+title = Chiếu Nhựa Bền Đẹp, Giá Sốc, Bán Chạy Nhất
+url = https://www.sendo.vn/chieu-nhua.htm
 
 [trangvangvietnam.com]
 match = -87.0%%
@@ -62,9 +62,9 @@ title = Chiếu Tre Việt Phổ Mến Thái Bình Cao Cấp - Chính Hãng ...
 url = https://demhong.vn/chieu-tre-viet-pho-men/
 
 [www.diepxuan.com]
-match = 26.1%%
-title = Chiếu nhựa Thái Bình 120x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-120x190.html
+match = 4.3%%
+title = Chiếu gấp Thái Bình 180x300 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-thai-binh-180x300.html
 
 [h5.lazada.vn]
 match = -17.4%%
