CI images update

--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-07-18 14:48:40
+lastsearch = 2024-07-18 17:37:25
 
 [chieutruc.info]
-match = -63.6%%
-title = Bảng giá chiếu Thái Lan dòng gấp vân gỗ cao cấp
-url = https://chieutruc.info/chieu-thai-lan-gap-van-go/
+match = -100.0%%
+title = Bảng giá chiếu cói Xuân Hòa xuất khẩu - hàng Việt Nam cao ...
+url = https://chieutruc.info/chieu-coi-xuan-hoa/
 
 [tiki.vn]
-match = -27.3%%
-title = Chiếu cói tatami hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chiếu cói tatami
+match = -36.4%%
+title = Chiếu cói nga sơn hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chiếu cói nga sơn
 
 [m.facebook.com]
 match = -13.6%%
