--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-07-18 13:22:05
+lastsearch = 2024-07-18 17:36:13
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -385,4 +385,9 @@ url = http://www.lexisnexis.com/documents/academic/upa_cis/3208_recsmacvpt1.pdf
 match = -131.2%%
 title = Giết người vì mâu thuẫn cá nhân nhận 14 năm tù
 url = http://lamdongtv.vn/tin-tuc-n23818/giet-nguoi-vi-mau-thuan-ca-nhan-nhan-14-nam-tu.html
+
+[satrafoods.com.vn]
+match = -175.0%%
+title = ƯU ĐÃI BAO LA - MUA HÀNG GIÁ TỐT (04/07 - 14/07/2024)
+url = https://satrafoods.com.vn/vn/khuyen-mai/uu-dai-bao-la-mua-hang-gia-tot-04-07-14-07-2024.html
 
