--- a/images/ruot-nem-korea-150x190x09/config.ini
+++ b/images/ruot-nem-korea-150x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-150x190x09.html
 lastopen = 2024-06-11 23:30:16
 
 [search]
-lastsearch = 2024-07-18 15:40:01
+lastsearch = 2024-07-18 17:40:01
 
 [www.riotgames.com]
 match = -84.0%%
@@ -17,9 +17,9 @@ title =
 url = https://en.wikipedia.org/wiki/Names_of_Korea
 
 [www.youtube.com]
-match = -25.0%%
-title = Korean VS German🇰🇷🇦🇹🇩🇪
-url = https://www.youtube.com/watch?v=MJWRS6eZ9YE
+match = -68.0%%
+title = 🇩🇪 German nee ❌ vs 🇰🇷 Korean 네 ne ✅ | Language Rant pt ...
+url = https://www.youtube.com/watch?v=bUW-Th-vPOw
 
 [www.diepxuan.com]
 match = 52.0%%
