CI images update

--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-07-18 17:35:40
+lastsearch = 2024-07-18 17:51:31
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -17,9 +17,9 @@ title = CHĂN LÔNG TUYẾT NHUNG CAO CẤP Thái Lan Loại 4kg
 url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg-i.126028938.4857799045
 
 [www.lazada.vn]
-match = 22.2%%
-title = Chăn Lông Tuyết 5kg Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/chan-long-tuyet-5kg/
+match = 7.4%%
+title = Mền Lông Tuyết Thái Giá Tốt T07/2024
+url = https://www.lazada.vn/tag/men-long-tuyet-thai/
 
 [tiki.vn]
 match = 11.1%%
@@ -195,4 +195,9 @@ url = https://thethao.sggp.org.vn/hoang-nguyen-thanh-ve-nhi-con-le-thi-tuyet-ve-
 match = -55.6%%
 title = Cháy trung tâm thương mại ở Trung Quốc khiến 16 người ...
 url = https://congan.com.vn/quoc-te/thoi-su-quoc-te/chay-trung-tam-thuong-mai-o-trung-quoc-khien-16-nguoi-thiet-mang_164861.html
+
+[bebubam.vn]
+match = 43.5%%
+title = Chăn tuyết cho bé 2 lớp
+url = https://bebubam.vn/products/chan-tuyet-cho-be-2-lop
 
