--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-18 12:47:06
+lastsearch = 2024-07-18 17:46:49
 
 [www.instagram.com]
-match = -169.2%%
-title = Embarking on a new journey, @Dior is set ...
-url = https://www.instagram.com/hashtag_legend/p/C0I6TiRv89q/
+match = -46.2%%
+title = Ke Huy Quan (@kehuyquan)
+url = https://www.instagram.com/kehuyquan/?hl=en
 
 [hk.linkedin.com]
 match = -100.0%%
@@ -17,8 +17,8 @@ title = Hoi Yee Ng - Christian Dior Couture
 url = https://hk.linkedin.com/in/hoi-yee-ng-662733106
 
 [wwd.com]
-match = -238.5%%
-title = Kimbee Chan Furthers Creative Pursuit With Crochet ...
+match = -184.6%%
+title = Kimbee Chan Furthers Creative Pursuit With ...
 url = https://wwd.com/fashion-news/fashion-scoops/kimbee-chan-knitwear-workshop-happy-yarn-1235938455/
 
 [vote.umich.edu]
@@ -32,9 +32,9 @@ title = Sitemap
 url = https://www.linklaters.com/en-us/sitemap
 
 [en.wikipedia.org]
-match = 0.0%%
-title = 
-url = https://en.wikipedia.org/wiki/Catherine_Dior
+match = -11.1%%
+title = Fiona Sit
+url = https://en.wikipedia.org/wiki/Fiona_Sit
 
 [press.fourseasons.com]
 match = -269.2%%
