--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-18 17:34:14
+lastsearch = 2024-07-18 17:44:16
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -47,9 +47,9 @@ title = ESL TEACHER : Changing School without leaving Vietnam
 url = https://www.expat.com/forum/viewtopic.php?id=994131
 
 [en.wikipedia.org]
-match = 17.4%%
-title = List of cities in Vietnam
-url = https://en.wikipedia.org/wiki/List_of_cities_in_Vietnam
+match = -38.5%%
+title = Ngo Dinh Diem
+url = https://en.wikipedia.org/wiki/Ngo_Dinh_Diem
 
 [books.google.com]
 match = -65.2%%
