--- a/images/chieu-dieu-hoa-khong-goi-12/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-12.html
 lastopen = 2024-06-09 23:15:39
 
 [search]
-lastsearch = 2024-07-18 09:55:51
+lastsearch = 2024-07-18 17:44:25
 
 [demxanh.com]
 match = 25.9%%
@@ -12,9 +12,9 @@ title = Chiếu điều hòa Nhật Bản NEKIO chính hãng
 url = https://demxanh.com/chieu-dieu-hoa-nhat-ban-nekio-chinh-hang-nhat.html
 
 [shopee.vn]
-match = 18.5%%
-title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
-url = https://shopee.vn/list/chiếu điều hòa
+match = -33.3%%
+title = Chiếu Điều Hòa Lụa Dày các cỡ 1.2m - 1.5m - 1.6m - 1.8m
+url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Dày-các-cỡ-1.2m-1.5m-1.6m-1.8m-2m-i.331106991.12046528350
 
 [goni.vn]
 match = 18.5%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [russo.vn]
-match = -37.0%%
-title = Chiếu điều hòa cao su non chính hãng đẹp nhất 2024 - Russo
-url = https://russo.vn/chieu-dieu-hoa-cao-su-non/
+match = 29.6%%
+title = Chiếu điều hòa cao su non 1m8x2m - Russo
+url = https://russo.vn/chieu-dieu-hoa-cao-su-1m8x2m/
 
 [www.dienmayxanh.com]
 match = -48.1%%
