--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-07-18 15:44:56
+lastsearch = 2024-07-18 17:52:02
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu lác D2 15
 url = https://www.diepxuan.com/chieu-lac-d2-15.html
 
 [www.facebook.com]
-match = 0.0%%
-title = PHOTOTIMEVietnam
-url = https://www.facebook.com/phototimevn/
+match = -80.0%%
+title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
+url = https://www.facebook.com/phimhaygiare/
 
 [banhang.shopee.vn]
 match = -66.7%%
