--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-07-18 06:45:54
+lastsearch = 2024-07-18 17:50:23
 
 [www.youtube.com]
-match = -390.0%%
-title = Renren Is Love, Renren Is Life | 14 Days With You (Day 1)
-url = https://www.youtube.com/watch?v=dS5JtXqOR-I
+match = -420.0%%
+title = A Date With Ren? Don't Worry About It | 14 Days With You ...
+url = https://www.youtube.com/watch?v=pjfU1xhfUrg
 
 [www.sinimed.co.il]
 match = -370.0%%
@@ -132,9 +132,9 @@ title =
 url = https://www.koha.net/en/lemsh/246319/14-vjecari-kinez-adoleshenti-me-i-gjate-ne-bote
 
 [www.reddit.com]
-match = -340.0%%
-title = Ren's dying in V14 (maybe) : r/PokemonRejuvenation
-url = https://www.reddit.com/r/PokemonRejuvenation/comments/qlg3io/rens_dying_in_v14_maybe/
+match = -50.0%%
+title = Ren (C14) : r/ANTM
+url = https://www.reddit.com/r/ANTM/comments/91ajpw/ren_c14/
 
 [www.maciociaonline.com]
 match = -250.0%%
