--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-07-18 16:21:59
+lastsearch = 2024-07-18 17:45:07
 
 [www.linkedin.com]
 match = -172.7%%
@@ -27,8 +27,8 @@ title = Tam Thi Tran Obituary - Wichita, KS
 url = https://www.dignitymemorial.com/obituaries/wichita-ks/tam-tran-9902717
 
 [www.facebook.com]
-match = -354.5%%
-title = Eat Healthier and more Economically | Kansas | March is ...
+match = -227.3%%
+title = Eat Healthier and more Economically - Salina
 url = https://www.facebook.com/SalinaRegionalHealthCenter/videos/eat-healthier-and-more-economically/859948698432933/
 
 [www.hoteljob.vn]
@@ -332,9 +332,9 @@ title = Upcoming Half Marathon Trail Runs in the USA
 url = https://www.runningintheusa.com/classic/list/map/half-marathon/upcoming/trail-run
 
 [www.tiktok.com]
-match = -327.3%%
-title = Tam tam Taram kkkk #dance #dancingchallenge #modinha ...
-url = https://www.tiktok.com/@danyceno/video/6818996604939422981
+match = -27.3%%
+title = Ks Tam (@fathertam)
+url = https://www.tiktok.com/@fathertam
 
 [www.movemint.cc]
 match = 0.0%%
