--- a/images/nem-sieu-nhe-9f-16/config.ini
+++ b/images/nem-sieu-nhe-9f-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-16.html
 lastopen = 2024-06-10 00:30:12
 
 [search]
-lastsearch = 2024-07-18 15:51:00
+lastsearch = 2024-07-18 18:12:04
 
 [www.instagram.com]
-match = -144.4%%
-title = Thùy Ngân (@huuloc861) • Instagram photos and videos
-url = https://www.instagram.com/huuloc861/
+match = -50.0%%
+title = NEM Furniture JSC (@nemfurniturejsc)
+url = https://www.instagram.com/nemfurniturejsc/?hl=en
 
 [www.lazada.vn]
 match = -61.1%%
@@ -185,4 +185,9 @@ url = https://hoctap24h.vn/wp-content/uploads/2018/04/Vật-Lí-10-Nâng-Cao.pdf
 match = -177.8%%
 title = Can a 16 year old US citizen get a temporary residence visa?
 url = https://expatriates.stackexchange.com/questions/24931/can-a-16-year-old-us-citizen-get-a-temporary-residence-visa
+
+[www.reddit.com]
+match = -150.0%%
+title = What resolution do you output for a 9x16 aspect ratio?
+url = https://www.reddit.com/r/editors/comments/bxo5pk/what_resolution_do_you_output_for_a_9x16_aspect/
 
