--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-18 15:33:19
+lastsearch = 2024-07-18 18:15:56
 
 [fsapartners.ed.gov]
 match = -45.0%%
 title = 2023-2024 Federal School Code List
-url = https://fsapartners.ed.gov/sites/default/files/2022-11/2324FedSchoolCodeList.pdf
+url = https://fsapartners.ed.gov/sites/default/files/2023-04/2324FedSchoolCodeListQ3.pdf
 
 [finaid.org]
 match = 0.0%%
@@ -37,9 +37,9 @@ title = Faculty and Staff | Department of Kinesiology
 url = https://www.sjsu.edu/kinesiology/about-us/faculty-and-staff.php
 
 [profiles.ucsd.edu]
-match = -21.4%%
-title = Louise Laurent
-url = https://profiles.ucsd.edu/louise.laurent
+match = -10.0%%
+title = Anders Dale - UCSD Profiles
+url = https://profiles.ucsd.edu/anders.dale
 
 [quicksearch.dla.mil]
 match = -185.7%%
@@ -52,9 +52,9 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = -28.6%%
-title = Jim Wells, PhD
-url = https://profiles.ucsf.edu/james.wells
+match = 0.0%%
+title = Youngho Seo, PhD
+url = https://profiles.ucsf.edu/youngho.seo
 
 [www.ncbi.nlm.nih.gov]
 match = -130.0%%
