--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-07-18 15:23:31
+lastsearch = 2024-07-18 18:52:58
 
 [hk.linkedin.com]
-match = -123.1%%
-title = Chan cocoo - Freelance (Self employed)
-url = https://hk.linkedin.com/in/chan-cocoo-2aa4362b1
+match = 7.7%%
+title = Coco Chan - Innity
+url = https://hk.linkedin.com/in/coco-chan-63ba63169
 
 [www.instagram.com]
-match = -230.8%%
-title = Hoi Chan (@hoichandraws) • Instagram photos and videos
-url = https://www.instagram.com/hoichandraws/?hl=en
+match = -23.1%%
+title = Coco Chan (@cocopops072)
+url = https://www.instagram.com/cocopops072/?hl=en
 
 [www.solunafineart.com]
 match = -22.2%%
@@ -22,13 +22,13 @@ title = Once Upon
 url = https://www.solunafineart.com/once-upon
 
 [en.wikipedia.org]
-match = 0.0%%
-title = 
-url = https://en.wikipedia.org/wiki/Coco_Chanel
+match = -25.0%%
+title = Coco Lee
+url = https://en.wikipedia.org/wiki/Coco_Lee
 
 [www.sassymamahk.com]
-match = -246.2%%
-title = That Mama: Coco Chan, Founder Of Voltage PR And Co- ...
+match = -200.0%%
+title = That Mama: Coco Chan, Founder Of Voltage PR ...
 url = https://www.sassymamahk.com/coco-chan-voltage-pr-omsa-family-life/
 
 [www.tiktok.com]
@@ -42,13 +42,13 @@ title = I Am an HKUer - Hong Kong
 url = https://admissions.hku.hk/hkuer
 
 [www.alamy.com]
-match = -246.2%%
-title = Hong Kong-born Canadian actress Grace Chan Hoi Lam ...
-url = https://www.alamy.com/hong-kong-born-canadian-actress-grace-chan-hoi-lam-attends-a-cross-year-activity-in-hong-kong-china-31-december-2018-image261310010.html
+match = -200.0%%
+title = Hong Kong-born Canadian actress Grace Chan ...
+url = https://www.alamy.com/hong-kong-born-canadian-actress-grace-chan-hoi-lam-attends-a-promotional-event-for-lukfook-jewellery-in-hong-kong-china-16-december-2018-image261773381.html
 
 [www.tripadvisor.com]
-match = -200.0%%
-title = Hoi An Hotel Prices & Reviews - Coco Viet Homestay
+match = -192.3%%
+title = Coco Viet Homestay - Hoi An Hotels - Tripadvisor
 url = https://www.tripadvisor.com/Hotel_Review-g298082-d19797871-Reviews-Coco_Viet_Homestay-Hoi_An_Quang_Nam_Province.html
 
 [jovelchan.com]
