--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-18 12:44:40
+lastsearch = 2024-07-18 18:50:13
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -32,14 +32,14 @@ title = Japanese spider crab
 url = https://en.wikipedia.org/wiki/Japanese_spider_crab
 
 [www.facebook.com]
-match = -61.5%%
-title = Northwest Georgia Scanner
-url = https://www.facebook.com/NWGAScanner/
+match = 0.0%%
+title = Sylvia Gani
+url = https://www.facebook.com/sylviagani/
 
 [www.youtube.com]
-match = -338.5%%
-title = Matto ki Saikil Official Trailer | Prakash Jha | M. Gani | In ...
-url = https://www.youtube.com/watch?v=wwH3mdjbKac
+match = -323.1%%
+title = Our New Friend, Gani (30 mins) l Episode 9 l Tayo the Little Bus
+url = https://www.youtube.com/watch?v=8L7o3sc3crI
 
 [www.regmovies.com]
 match = -215.4%%
