--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-18 17:48:59
+lastsearch = 2024-07-18 20:00:22
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -262,9 +262,9 @@ title = HOA
 url = https://www.click2houston.com/topic/HOA/
 
 [www.tiktok.com]
-match = -170.6%%
-title = Original Video of Hoa Guy Fines Neighbor for to Many ...
-url = https://www.tiktok.com/discover/Original-video-of-hoa-guy-fines-neighbor-for-to-many-packages-on-porch?lang=en
+match = -82.4%%
+title = I need advice #lawyer #hoa #taylorswift
+url = https://www.tiktok.com/@koltindarley/video/7351825529915444522
 
 [www.21alivenews.com]
 match = -123.5%%
