CI images update

--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-18 03:34:07
+lastsearch = 2024-07-18 20:25:54
 
 [shopee.vn]
 match = -8.0%%
@@ -22,9 +22,9 @@ title = XUẤT KHẨU LAO ĐỘNG ĐÀI LOAN: TUYỂN GẤP 15 NAM ...
 url = https://hoanglongcms.com/donhang/xuat-khau-lao-dong-dai-loan-tuyen-gap-15-nam-san-xuat-thuy-tinh/
 
 [www.facebook.com]
-match = 25.0%%
-title = Xin chào, tôi ở Đài Loan
-url = https://www.facebook.com/toiodailoan/
+match = -92.0%%
+title = Bản tin tiếng Việt PTS 公視越南語新聞 | Taipei
+url = https://www.facebook.com/ptsvietnamesenews/?locale=vi_VN
 
 [vi.wikipedia.org]
 match = -4.0%%
@@ -112,9 +112,9 @@ title = Lừa đảo xuất khẩu lao động, người đàn ông Đài Loan l
 url = https://congly.vn/lua-dao-xuat-khau-lao-dong-nguoi-dan-ong-dai-loan-linh-12-nam-tu-399654.html
 
 [trithucvn.co]
-match = -76.0%%
-title = Mỹ mua lại dàn tên lửa Hawk của Đài Loan để viện trợ cho ...
-url = https://trithucvn.co/the-gioi/my-mua-lai-dan-ten-lua-hawk-cua-dai-loan-de-vien-tro-cho-ukraine.html
+match = -80.0%%
+title = Đài Loan và Nhật Bản hợp tác kêu gọi toàn cầu chống thu ...
+url = https://trithucvn.co/the-gioi/dai-loan-va-nhat-ban-hop-tac-keu-goi-toan-cau-chong-thu-hoach-noi-tang.html
 
 [www.klook.com]
 match = -12.0%%
