--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-07-18 18:48:21
+lastsearch = 2024-07-18 20:26:51
 
 [www.galottery.com]
 match = -7.7%%
@@ -425,4 +425,9 @@ url = https://www.usda.gov/sites/default/files/documents/wwcb.pdf
 match = 0.0%%
 title = 
 url = https://nassaunationalcable.com/blogs/blog/what-is-the-ampacity-of-14-awg-wire
+
+[www.northwestregisteredagent.com]
+match = 0.0%%
+title = 
+url = https://www.northwestregisteredagent.com/llc/georgia/dissolve
 
