--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-07-18 20:02:06
+lastsearch = 2024-07-18 20:27:24
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -12,8 +12,8 @@ title = Điệp Xuân Ruột Korea - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-bong/ruot-korea.html
 
 [www.reddit.com]
-match = -73.9%%
-title = Playing on NA servers from Korea? : r/leagueoflegends
+match = -13.0%%
+title = Playing on NA servers from Korea?
 url = https://www.reddit.com/r/leagueoflegends/comments/6d4p1g/playing_on_na_servers_from_korea/
 
 [www.southpasadenaca.gov]
@@ -22,9 +22,9 @@ title = notice on public participation & accessibility
 url = https://www.southpasadenaca.gov/files/assets/public/v/1/police/documents/agenda-packet-combined-092.pdf
 
 [en.wikipedia.org]
-match = -58.3%%
-title = Nam Joo-hyuk
-url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
+match = -72.7%%
+title = Kristi Noem
+url = https://en.wikipedia.org/wiki/Kristi_Noem
 
 [www.facebook.com]
 match = -11.8%%
