--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-07-18 16:49:14
+lastsearch = 2024-07-18 20:28:30
 
 [thamaulac.com.vn]
 match = -88.9%%
@@ -32,9 +32,9 @@ title = thảm ghép 60x60cm giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=thảm ghép 60x60cm
 
 [vatlieulotsan.com]
-match = -55.6%%
-title = Thảm Xốp 60 × 60 Cm Mặt Nỉ Hoa Văn Âu Lạc
-url = https://vatlieulotsan.com/product/tham-xop-60-x-60-cm-mat-ni-hoa-van-au-lac/
+match = -27.8%%
+title = Thảm Xốp 60 × 60 Cm Một Màu Vân Caro
+url = https://vatlieulotsan.com/tham-xop-60-x-60-cm-mot-mau-van-caro/
 
 [thamtuonglam.vn]
 match = 21.4%%
