CI images update

--- a/images/chieu-dieu-hoa-co-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 lastopen = 2024-06-06 16:54:53
 
 [search]
-lastsearch = 2024-07-18 17:53:10
+lastsearch = 2024-07-18 20:39:59
 
 [shopee.vn]
-match = -37.5%%
-title = Set bộ chiếu điều hòa tencel latex kèm 2 vỏ gối đầu ...
-url = https://shopee.vn/Set-bộ-chiếu-điều-hòa-tencel-latex-kèm-2-vỏ-gối-đầu-chiếu-cao-su-non-thoáng-mát-chiếu-hè-H-T-Chăn-Ga-Gối-i.173486478.18978075439
+match = -41.7%%
+title = Chiếu Điều Hòa Lụa Dày các cỡ 1.2m - 1.5m - 1.6m - 1.8m
+url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Dày-các-cỡ-1.2m-1.5m-1.6m-1.8m-2m-i.331106991.12046528350
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -37,9 +37,9 @@ title = Top 3 loại chiếu điều hòa cao cấp nhất thị trường - Kyo
 url = https://kyoryo.vn/tin-tuc/top-3-loai-chieu-dieu-hoa-cao-cap-nhat-thi-truong-.html
 
 [sieuthidem.vn]
-match = 50.0%%
-title = Chiếu điều hoà Tencel - Hà Nội
-url = https://sieuthidem.vn/product-category/chan-ga-goi/chieu-dieu-hoa-tencel/
+match = 16.7%%
+title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
+url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/
 
 [cungnhaulamgiau.vn]
 match = 4.2%%
@@ -47,9 +47,9 @@ title = CHIẾU ĐIỀU HÒA CAO SU NON COCO ĐẶC BIỆT 2024
 url = https://cungnhaulamgiau.vn/chieu-dieu-hoa-cao-su-non-coco-dac-biet-2024_p6524
 
 [tiki.vn]
-match = -50.0%%
-title = chiếu điều hòa latex 8D cực mát có bo chun bọc đệm 15- ...
-url = https://tiki.vn/chieu-dieu-hoa-latex-8d-cuc-mat-co-bo-chun-boc-dem-15-25cm-tang-kem-2-vo-goi-cung-mau-p253286233.html
+match = 16.7%%
+title = Chiếu điều hòa có mát không? Review 10 ...
+url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [xn--nekiovitnam-y69e.vn]
 match = -20.8%%
