--- a/images/ruot-nem-korea-140x190x09/config.ini
+++ b/images/ruot-nem-korea-140x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-140x190x09.html
 lastopen = 2024-06-11 23:28:41
 
 [search]
-lastsearch = 2024-07-18 17:50:15
+lastsearch = 2024-07-18 20:36:18
 
 [www.riotgames.com]
 match = -84.0%%
@@ -100,4 +100,9 @@ url = https://visaguide.world/moving-to/south-korea/
 match = -20.0%%
 title = ru486 on X: "@imMAK02 North Korea?" / X
 url = https://twitter.com/r2b2grandma/status/914646244206743552
+
+[www.tiktok.com]
+match = -40.0%%
+title = Im in Usa Im in Canada Im in South Korea
+url = https://www.tiktok.com/discover/im-in-usa-im-in-canada-im-in-south-korea?lang=en
 
