--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-07-18 15:24:03
+lastsearch = 2024-07-18 20:39:02
 
 [www.lazada.vn]
 match = -61.1%%
@@ -12,9 +12,9 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -61.1%%
-title = NEM Fashion - ÁO KHOÁC LÔNG VŨ SIÊU NHẸ
-url = https://www.facebook.com/nemfashion.official/posts/áo-khoác-lông-vũsiêu-nhẹ-siêu-ấm-chỉ-từ-𝟏𝟏𝟗𝟗𝐊-với-xu-thế-phát-triển-của-thời-tra/1942429895894902/
+match = -122.2%%
+title = Nem Nướng, Nem Chua Thanh Hóa - giá siêu mềm chỉ 30k
+url = https://www.facebook.com/groups/7408819529141100/posts/-nem-nướng-nem-chua-thanh-hóa-giá-siêu-mềm-chỉ-30k-đừng-để-vị-giác-của-bạn-phải-/8212919362064442/
 
 [thegioinem.com]
 match = 23.5%%
@@ -47,9 +47,9 @@ title = Nem rán Việt Nam được ca ngợi là món ăn nhẹ ngon nhất ..
 url = https://vietnamnet.vn/nem-ran-viet-nam-duoc-ca-ngoi-la-mon-an-nhe-ngon-nhat-the-gioi-2149178.html
 
 [www.tiktok.com]
-match = -16.7%%
-title = Nem Nuong Que Huong Air Fryer
-url = https://www.tiktok.com/discover/nem-nuong-que-huong-air-fryer
+match = -127.8%%
+title = Nem Nướng Siêu To Khổng Lồ Siêu Ngon #ancungtiktok ...
+url = https://www.tiktok.com/@thenguyen_kitchen/video/7139504048713010458
 
 [www.diepxuan.com]
 match = 11.1%%
