--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-18 17:19:20
+lastsearch = 2024-07-18 20:37:47
 
 [en.wikipedia.org]
 match = 15.0%%
@@ -405,4 +405,9 @@ url = https://www.gamekapocs.hu/
 match = -85.0%%
 title = Securities and Exchange Commission: Home - SEC
 url = https://www.sec.gov.ph/
+
+[8tharmy.korea.army.mil]
+match = -175.0%%
+title = The Official Home Page of the Eighth Army - Eighth Army | The ...
+url = https://8tharmy.korea.army.mil/site/index.asp
 
