CI images update

--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-07-18 17:16:56
+lastsearch = 2024-07-18 20:51:59
 
 [dongagroup.vn]
 match = -272.7%%
@@ -22,9 +22,9 @@ title = Giường tầng sắt
 url = https://noithatduongdong.com/giuong-tang-sat
 
 [giuonggaphoaphat.com]
-match = -81.8%%
-title = GIƯỜNG GẤP NHẬP KHẨU NHẬT BẢN
-url = http://giuonggaphoaphat.com/giuong-nhap-khau-nhat-ban
+match = -27.3%%
+title = Giuonggaphoaphat.com
+url = http://giuonggaphoaphat.com/
 
 [tunhuamiennam.com]
 match = -245.5%%
@@ -185,4 +185,9 @@ url = https://mraovat.nguoi-viet.com/classified/phong-cho-thue-rooms-to-share-br
 match = -227.3%%
 title = Bộ giường ngủ A1 - 1 giường - 2 tab đầu giường
 url = https://vinmus.com/en/bo-giuong-ngu-a1-1-giuong-2-tab-dau-giuong.html
+
+[m.facebook.com]
+match = -272.7%%
+title = Happy Deals - Happy Day 2 | RUNNNN Giường kèm ...
+url = https://m.facebook.com/groups/3252180871727606/posts/3866095360336151/
 
