--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-18 20:06:54
+lastsearch = 2024-07-18 20:50:39
 
 [tiki.vn]
-match = -122.2%%
-title = Mua Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi
+match = -138.9%%
+title = Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi - Tiki
 url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-cam-160-x-200-cm-p7695465.html
 
 [nemxinh.net]
@@ -17,9 +17,9 @@ title = Kích thước 160x200
 url = http://nemxinh.net/filter/chan-ga+160x200
 
 [www.everonvn.vn]
-match = -183.3%%
-title = Everon EPM-22060 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epm22060.html
+match = -188.9%%
+title = Everon ESB-22054 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-esb22054.html
 
 [lavendervn.com]
 match = -22.2%%
