--- a/images/chan-cuu-loai-2/config.ini
+++ b/images/chan-cuu-loai-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-cuu-loai-2.html
 lastopen = 2024-06-09 23:05:55
 
 [search]
-lastsearch = 2024-07-18 07:56:22
+lastsearch = 2024-07-18 20:51:47
 
 [tiki.vn]
 match = -133.3%%
@@ -37,9 +37,9 @@ title = Nhận biết chăn lông cừu hữu cơ và chăn tổng hợp - Lasan
 url = https://lasantevn.com/nhan-biet-chan-long-cuu-huu-co-va-chan-tong-hop/
 
 [shopee.vn]
-match = -173.3%%
-title = chăn lông cừu ultimate giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chăn lông cừu ultimate
+match = -186.7%%
+title = Chăn cừu 2 lớp nặng 2.1 kg Lasante Pháp đắp thu đông, ...
+url = https://shopee.vn/Chăn-cừu-2-lớp-nặng-2.1-kg-Lasante-Pháp-đắp-thu-đông-chung-cư-văn-phòng-i.8605690.19859463874
 
 [changadep88.vn]
 match = -80.0%%
