--- a/images/nem-pyeoda-thuong-18/config.ini
+++ b/images/nem-pyeoda-thuong-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-18.html
 lastopen = 2024-06-18 17:45:17
 
 [search]
-lastsearch = 2024-07-18 15:47:50
+lastsearch = 2024-07-18 20:44:00
 
 [www.facebook.com]
 match = -45.0%%
@@ -12,9 +12,9 @@ title = Chăn Ga Gối Đệm Pyeoda - Như Tình Yêu Của Mẹ
 url = https://www.facebook.com/pyeoda.vn/posts/pyoeda-thương-hiệu-của-công-ty-tnhhtm-ngọc-dũng-là-công-ty-sản-xuất-chăn-ga-gối-/873479032786443/
 
 [demxanh.com]
-match = -85.0%%
-title = Chăn ga gối Singapore Pyeoda LCHARME gấm 7 món PL18
-url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-lcharme-gam-7-mon-pl18.html
+match = -120.0%%
+title = Top 8 thương hiệu nệm bông ép chất lượng nhất hiện nay!
+url = https://demxanh.com/top-thuong-hieu-nem-bong-ep-chat-luong-nhat-hien-nay.html
 
 [www.khodemthanhdo.com]
 match = -8.3%%
@@ -62,9 +62,9 @@ title = Bộ chăn ga gối Singapore Gold 5 gối Pyeoda 24
 url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-24.html
 
 [vuanem.com]
-match = -15.0%%
-title = Chăn Ga Pyeoda Cao Cấp, Chính Hãng
-url = https://vuanem.com/brand/pyeoda
+match = -125.0%%
+title = Tư vấn cách chọn mua chăn ga gối đệm tốt nhất hiện nay
+url = https://vuanem.com/blog/tu-van-mua-chan-ga-goi-dem-tot.html
 
 [changagoidemphuongbac.com]
 match = -20.0%%
@@ -75,4 +75,9 @@ url = https://changagoidemphuongbac.com/bo-ga-goi-chun-chan-hq-pyeoda/
 match = -10.0%%
 title = Đệm PYEODA
 url = https://changagoidemtamhao.com/dem-pyeoda
+
+[sleep.vn]
+match = -70.0%%
+title = Đánh Giá Chi Tiết Chăn Ga Gối Nệm Sông Hồng
+url = https://sleep.vn/danh-gia-chan-ga-goi-nem-song-hong/
 
